package org.example.bank.model;

public enum TransactionType {
    DEPOSIT,
    WITHDRAW,
    TRANSFER
}